added new home image with logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-/* line 1, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\000031}}
 nav {
   color: grey;
 }
-/* line 3, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\000033}}
 nav ul {
   list-style: none;
 }
-/* line 5, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\000035}}
 nav ul li {
   float: left;
 }
 
-/* line 11, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000312}}
 .navBar {
   padding: 10px;
   background-color: #95a5a6;
@@ -19,6 +19,10 @@ nav ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: fixed;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -28,14 +32,14 @@ nav ul li {
   width: 100%;
 }
 
-/* line 25, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000326}}
 .listItem {
   padding: 10px;
   font-family: 'Montserrat', sans-serif;
 }
 
 @media screen and (min-width: 600px) {
-  /* line 32, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000333}}
   .navBar {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -51,41 +55,47 @@ nav ul li {
     width: 100%;
   }
 
-  /* line 40, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000341}}
   .navList {
     display: block !important;
   }
 
-  /* line 44, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000345}}
   .listItem {
     float: left;
     padding: 0 20px;
   }
 
-  /* line 49, ../sass/_nav.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/_nav\.scss}line{font-family:\0000350}}
   .navList::after {
     clear: both;
     content: '';
     display: block;
   }
 }
-/* line 6, ../sass/style.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/style\.scss}line{font-family:\000035}}
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/style\.scss}line{font-family:\000039}}
 .homeImg {
-  background-image: url("../images/purpleBar.jpg");
+  background-image: url("../images/homeImg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  height: auto;
+  top: 0;
+  left: 0;
 }
 
-/* line 15, ../sass/style.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/style\.scss}line{font-family:\0000320}}
 .bgSize {
   width: 100vw;
   height: 100vh;
 }
 
-/* line 20, ../sass/style.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/zoe\/Desktop\/Yoobee2020\/termOne\/establishmentSite\/sass\/style\.scss}line{font-family:\0000325}}
 .overflow {
   overflow: hidden;
 }
