--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,10 @@
 $greyColor: #95a5a6;
 $whiteColor: #ecf0f1;
+$backgroundColor: #222222;
 
 
 $mediumScreen: 600px;
 $largeScreen: 900px;
+
+$headingFont: 'Montserrat', sans-serif;
+$paragraphFont: 'Montserrat', sans-serif;
