--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -29,7 +29,7 @@ nav {
 }
 
 
-@media screen and (min-width:600px){
+@media screen and (min-width:$mediumScreen){
     .navBar{
         flex-direction: row;
         justify-content: center;
