--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,18 @@
-@import '_variables';
-@import '_grid';
-@import '_nav';
-
 * {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+@import '_variables';
+@import '_grid';
+@import '_nav';
+
+.containerFull {
+    max-width: 1100px;
+    margin: 0 auto;
+    min-height: 50px;
 }
 
 .homeImg {
@@ -21,12 +27,17 @@
 }
 
 .homeImgSize {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+}
+
+body {
+    background-color: $backgroundColor;
 }
 
 .overflow {
     overflow: hidden;
+    @include clear;
 }
 
 .flexArrow {
@@ -40,9 +51,6 @@
     font-size: 4em;
 }
 
-.backgroundColor {
-    background-color: $backgroundColor;
-}
 
 .mainHeading {
     font-family: $headingFont;
@@ -50,7 +58,7 @@
     text-align: center;
     font-weight: normal;
     color: $whiteColor;
-    padding-top: 15px;
+    padding: 15px 12px 0px;
 }
 
 .pText {
@@ -59,7 +67,7 @@
     text-align: left;
     font-weight: normal;
     color: $whiteColor;
-    padding: 12px 22px;
+    padding: 5px 22px;
 }
 
 .subHeading {
@@ -75,4 +83,29 @@
     color: $whiteColor;
     font-size: 20px;
     float: right;
+}
+
+.floatLeft{
+    float: left;
+}
+
+.floatRight {
+    float: right;
+}
+
+.boysInBarImg {
+    display: none;
+}
+
+
+
+@media screen and (min-width: $largeScreen) {
+    .borderBox {
+        border: 1px solid $whiteColor;
+        margin-bottom: 10px;
+    }
+
+    .boysInBarImg {
+        display: block !important;
+    }
 }
